--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@ background-color:black;
 
 <h2 style="color:white;background-color:red;">Finally Free Edition</h2>
 <br>
-<h2 style="color:red; background-color:yellow;"> June 15th 2018 AD </h2>
+<h2 style="color:red; background-color:yellow;"> June 19th 2020 AD </h2>
 <br>
-<img src="juneteenth_flag.png" alt="Juneteenth_Flag">
+// <img src="juneteenth_flag.png" alt="Juneteenth_Flag">
 
 <br>
-<div id= "flyer_text">
+//  <div id= "flyer_text">
  
 <p style="background-color:green;"> Peace to the ancestors! Celebrate the day! Pour up some libations, Keep bad vibes at bay. </p>
 
@@ -34,7 +34,7 @@ background-color:black;
 
 <p> It's a celebration! Our spirit is still in tack. Today and Everyday, <b> We are so proud to be so black </b> </p>
 
- <img src="red_star_rbg_bars.png" alt="Flag_2">
+ // <img src="red_star_rbg_bars.png" alt="Flag_2">
 
 <Br>
 <!-- content added will include the time and place (Malcolm X Park All Day) and links ot other such celebrations -->
